vlib/v/checker/tests/alias_type_exists.out
vlib/v/checker/tests/alias_type_exists.v:1:1: error: type `Bird` doesn't exist
    1 | type Pigeon Bird
      | ~~~~~~~~~~~
    2 |
    3 | fn main() {
