vlib/v/checker/tests/alias_type_exists.v
type Pigeon Bird

fn main() {

}
